[metadata]
name = hgi-vault
version = 0.1.0
author = Christopher Harrison
author_email = ch12@sanger.ac.uk
license = GPLv3
license_file = LICENSE

[options]
python_requires = >= 3.8
include_package_data = True
packages = find:
install_requires =
  ldap3      == 2.8.1
  psycopg2   == 2.8.6
  PyYAML     == 5.3.1
  MarkupSafe == 2.0.1
  Jinja2     == 2.11.2

[options.package_data]
* = *.sql, *.j2

[options.entry_points]
console_scripts =
  vault = bin.vault:main
  sandman = bin.sandman:main
